1403: Mobile. Notifications. Check z-index and design issues

--- a/src/Compent.uIntra/App_Plugins/Notification/List/notificationList.css
+++ b/src/Compent.uIntra/App_Plugins/Notification/List/notificationList.css
@@ -3,7 +3,7 @@
     box-shadow:0 0 2px rgba(0,0,0,0.2);
     padding:36px 21px 0;
 
-    @media(--for-tablet-portrait-down){
+    @media (--for-tablet-portrait-down){
         margin:0 -20px;
     }
 
@@ -58,6 +58,13 @@
         text-align:center;
         border-radius:50%;
         font-family:var(--font-general);
+
+        @media (--for-tablet-portrait-down) {
+            top: 13px;
+            margin: 0 0 0 5px;
+            left: auto;
+            right:9px;
+        }
     }
 
     &__list{
@@ -74,12 +81,14 @@
             }
 
             @media (--for-tablet-portrait-down){
-                width:calc(100vw - 17px);
+                width:100vw;
                 transform:translate(0, -100%);
                 transition: transform linear 200ms;
                 display:block;
                 left:auto;
                 right:0;
+                max-height:calc(100vh - 60px);
+                overflow:auto;
 
                 ._notifications-expanded &{
                     transform:translate(0, 0);
@@ -129,7 +138,7 @@
     @media (--for-tablet-portrait-down) {
         position:absolute;
         width: 57px;
-        right:-5px;        
+        right:-5px;
 
         &__icon {
             position:relative;
@@ -143,16 +152,6 @@
             ._menu-expanded &{
                 opacity:0;
             }
-
-            span {
-                margin: 0 0 0 5px;
-            }
-        }
-
-        &__number {
-            top: -10px;
-            margin: -15px 0 0 5px;
-            left: 50%;
         }
 
         &__list{
@@ -187,7 +186,7 @@
         background:var(--color-white);
         border:1px solid var(--color-light-gray);
 
-        @media(--for-tablet-portrait-down){
+        @media (--for-tablet-portrait-down){
             border:none;
         }
 
